tests/paczka1/fuzzy1/73768141.err
Error in line 4: 9p14llOZC1g A98 18,7
Error in line 2: TvUbT1L S716 82,8
Error in line 6: XymG A98 17,8
Error in line 16: 7ahBo9Pks S125 84,6
Error in line 12: XymG S716 23,3
Error in line 17: 7ahBo9Pks A629 31,4
